--- a/ProyectoWebEncuestas/Views/Shared/_LayoutAdmin.cshtml
+++ b/ProyectoWebEncuestas/Views/Shared/_LayoutAdmin.cshtml
@@ -16,7 +16,7 @@
         <div class="menu-content">
             <div class="menu-header">
                 <span class="user-name" id="userName">Usuario</span>
-                <span class="close-menu" onclick="toggleMenu()">×</span>
+                <span class="close-menu" onclick="toggleMenu()">☰</span>
             </div>
             <div class="menu-links">
                 <a href="/Admin/Index">Panel central</a>
